# SiteGrab

./: .gitignore  Cargo.toml  README.md  error.txt  install.sh
.github/workflows/: release.yml
src/: archiver.rs  crawler.rs  main.rs  manifest.rs  renderer.rs  rewriter.rs  util.rs
